# booking-ai-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py
data/: fx_rates_usd.json
fixtures/: listings_sample.json
scripts/: debug_answer_payload.py  debug_apify_find_specific_hotel.py  debug_conversation.py  debug_full_pipeline.py  debug_intent_router.py  debug_unknown_field_search.py  find_product_risk_cases.py  inspect_multi_constraint_failures.py  list_gemini_models.py  one_apify_debug.py  one_apify_property_type_check.py  one_e2e_apify.py  run_pipeline_for_eval.py  show_eval_results.py  smoke_adk_orchestrator_agent.py  smoke_apify_search.py  smoke_apify_tool.py  smoke_fallback_classifier.py  smoke_intent_router.py  smoke_match_structured.py  smoke_orchestrator.py
tests/: _test_normalize_search_response.py  test_answer_generation.py  test_answer_generation_llm.py  test_apply_intent_patch.py  test_build_answer_payload.py  test_constraint_evidence_resolution.py  test_constraint_state.py  test_constraint_status_output.py  test_constraints_schema.py  test_conversation_flow.py  test_date_normalization.py  test_field_negative_rules.py  test_field_rules_matching.py  test_intent_patch.py  test_intent_router_constraints.py  test_intent_update_constraints.py  test_intent_update_flow.py  test_intent_update_month_inheritance.py  test_listing_signals.py  test_llm_field_fallback.py  test_matcher_structured_rules.py  test_normalize_search_response.py  test_numeric_filters.py  test_occupancy.py  test_orchestrate_search.py  (+5 more)
(+87 files in other folders)
